fix for white space on right side of buyerorderindex

--- a/public/css/order.css
+++ b/public/css/order.css
@@ -8,6 +8,7 @@ h1{
     margin-left: 15px;
     padding-top: 10px;
     padding-bottom: 0px;
+    margin-right: 0px;
 }
 
 .back-row{
